# YAHR

./: .claudeignore  .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  README.md  extract_docs.py  package-lock.json  package.json  pyproject.toml  requirements-a2a.txt  requirements.txt
.husky/: pre-commit
agents/: __init__.py
agents/job_searcher/: __init__.py  adzuna.py  factory.py  provider.py
agents/resume_builder/: __init__.py  agent_card.py  config.py  core.py  executor.py  server.py
cli/: app.py  main.py
cli/commands/: convert.py  resume.py  search_jobs.py  setup.py  welcome.py
cli/commands/setup/: env_file.py  setup_jobs_provider.py  setup_open_router.py
docs/: _config.yml  index.md  main.qd  resume-parser-agent.md
docs/_includes/: abstract.md  code.md  conclusion.md  core-concepts.md  deployment.md  design.md  domain.md  tech-stack.md  testing.md
docs/_layouts/: default.html
docs/c4/: ADZUNA_MCP.c4  CLI.c4  CV_ASSISTANT.c4  JOB_SEARCHER.c4  MOCK_MCP.c4  ORCHESTRATOR.c4  PIPELINE.c4  RANKER.c4  YAHR.c4
models/: __init__.py  resume.py
output/: resume.md
patches/: @likec4+core+1.58.0.patch
src/yahr/: config.py
src/yahr/agents/: job_searcher.py  orchestrator.py  roster.py
src/yahr/agents/cv_assistant/: __init__.py  agent_card.py  core.py  executor.py
src/yahr/agents/job_searcher/: __init__.py  agent_card.py  core.py  executor.py  providers.py  refine.py
src/yahr/cli/: __init__.py
src/yahr/mcp/: __init__.py
src/yahr/mcp_server/: __init__.py  adzuna.py  mock.py
tests/: test_resume_builder.py
(+18 files in other folders)
