[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yahr"
version = "0.1.0"
description = "YAHR (Yet Another HR) — a personal HR assistant CLI that parses a resume, finds matching jobs, and suggests improvements."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Elvis Perlika", email = "elvis.perlika@studio.unibo.it" }]
dependencies = [
    "a2a-sdk>=1.1.0",
    "openai>=2.41.0",
    "markitdown>=0.0.2",
    "typer>=0.26.0",
    "rich>=15.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=1.2.0",
    "uvicorn>=0.49.0",
    "sse-starlette>=3.4.0",
]

[project.scripts]
yahr = "cli.main:main"

[tool.setuptools]
packages = ["cli", "cli.commands", "agents", "agents.resume_builder", "models"]
