[project]
name = "yahr"
version = "0.0.1"
description = "YAHR — Yet Another HR career co-pilot."
requires-python = ">=3.14"
# ponytail: markitdown pinned to 0.0.2 — the last release installable on Python 3.14
# (0.1.x pulls magika→onnxruntime, which has no 3.14 wheel). PDF works natively in 0.0.2.
dependencies = ["typer", "rich", "markitdown==0.0.2"]

[project.scripts]
yahr = "yahr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahr"]
